feat: add map and footer

--- a/index.html
+++ b/index.html
@@ -399,22 +399,33 @@
               <input class="question-form__submit" type="submit" value="submit"> 
              </form>  
             </div>
-            <div class="contacts__map"></div>
+            <div class="contact-us">              
+              <span class="contact-us__text">
+                Rostov-on-Don, Nansen St., 239 Shopping Center Decorum Tel +7 (928) 768 32 29
+              </span>
+              <div class="contact-us__social">
+                <div class="contact-us__email social-icon"></div>
+                <div class="contact-us__instagram social-icon"></div>
+              </div>
+            </div>
+            <div class="map"></div>
           </section>
           <footer class="footer">
-              <span class="footer__logo"></span>
-              <nav class="footer__menu">
-                <!-- <ul class="menu-footer">
-                  <li class="menu-footer__items_selected"><a href="" class="menu-footer__links"></a></li>
-                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-                </ul> -->
+            <div class="home">
+              <h1 class="home__logo">IC "Repair Design Project</h1>
+              <nav class="home__menu">
+                <ul class="menu">
+                  <li class="menu__items menu__items--selected"><a href="" class="menu__links">home</a></li>
+                  <li class="menu__items"><a href="#" class="menu__links">projects</a></li>
+                  <li class="menu__items"><a href="" class="menu__links">measurement</a></li>
+                  <li class="menu__items"><a href="" class="menu__links">team</a></li>
+                  <li class="menu__items"><a href="" class="menu__links">reviews</a></li>
+                  <li class="menu__items"><a href="" class="menu__links">contacts</a></li>
+                </ul>
               </nav>
-              <a class="footer__phone" href=""></a>    
-              <button class="footer__call"></button>
+              <a class="home__phone" href="tel:" >+7 (928) 768-32-39</a>    
+              <button class="home__call">Request a call</button>
+            </div> 
           </footer>
         </main>    
   </div>  
