refactor: use prettier

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h1 class="home__logo">IC "Repair Design Project</h1>
           <nav class="home__menu">
             <ul class="menu">
-              <li class="menu__items menu__items--selected"><a href="" class="menu__links">home</a></li>
+              <li class="menu__items menu__items_selected"><a href="" class="menu__links">home</a></li>
               <li class="menu__items"><a href="#" class="menu__links">projects</a></li>
               <li class="menu__items"><a href="" class="menu__links">measurement</a></li>
               <li class="menu__items"><a href="" class="menu__links">team</a></li>
@@ -27,7 +27,7 @@
           <a class="home__phone" href="tel:" >+7 (928) 768-32-39</a>    
           <button class="home__call">Request a call</button>
         </div>  
-        </header>
+      </header>
         <main class="content">
           <section class="banner">
             <div class="banner__social">
@@ -35,7 +35,7 @@
             </div>
             <div class="banner__banner">
               <span class="banner-title">Turnkey Repair in the city of
-                <span class="banner-title--colored">Rostov-on-Don</span>
+                <span class="banner-title banner-title_colored">Rostov-on-Don</span>
               </span>
               <span class="banner-promo">Get ready-made turnkey repairs on time <br> with work time saving up to 45 days and 20% from cost of materials due to the organization of work</span>
               <button class="banner-calculate btn">CALCULATE THE COST</button>
@@ -67,7 +67,7 @@
               </div>
               <div class="projects-switcher">
                 <span class="switcher-left switcher"></span>
-                <span class="switcher-marker switcher-marker--colored switcher"></span>
+                <span class="switcher-marker switcher-marker_colored switcher"></span>
                 <span class="switcher-marker switcher"></span>
                 <span class="switcher-marker switcher"></span>
                 <span class="switcher-right switcher"></span>
@@ -75,7 +75,7 @@
             </div>
             <div class="projects__slider">
               <nav class="slider-map">
-                <a href="#" class="map-name map-name--colored ">Rostov-on-Don, Admiral</a>
+                <a href="#" class="map-name map-name_colored ">Rostov-on-Don, Admiral</a>
                 <a href="#" class="map-name">Sochi Thieves</a>
                 <a href="#" class="map-name">Rostov-on-Don Patriotic</a>
               </nav>
