refactor: change page indent

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
               <a class="social-link" href="http://instagram.com/"></a>
             </div>
             <div class="banner__banner">
-              <span class="banner-title">Turnkey Repair in the city of
-                <span class="banner-title banner-title_colored">Rostov-on-Don</span>
-              </span>
+              <div class="banner-header">
+                  <span class="banner-title">Turnkey Repair in the city of
+                      <span class="banner-title banner-title_colored">Rostov-on-Don</span>
+                    </span>
+              </div>              
               <span class="banner-promo">Get ready-made turnkey repairs on time <br> with work time saving up to 45 days and 20% from cost of materials due to the organization of work</span>
               <button class="banner-calculate btn">CALCULATE THE COST</button>
               <button class="banner-submit btn">SUBMIT YOUR APPLICATION</button>
@@ -120,7 +122,7 @@
                 <div class="repair-examples__item">
                     <img class="item-image" src="assets/img/overhaul.png"  width="392" height="421" alt="redecorating">
                     <div class="item-list">
-                      <span class="list-title">Redecorating</span>
+                      <span class="list-title">Overhaul</span>
                       <ul class="list-points">
                         <li class="points">Dismantling of old coatings</li>
                         <li class="points">Wallpapering</li>
@@ -136,7 +138,7 @@
                   <div class="repair-examples__item">
                       <img class="item-image" src="assets/img/repair.png"  width="392" height="421" alt="redecorating">
                       <div class="item-list">
-                        <span class="list-title">Redecorating</span>
+                        <span class="list-title">Designer Repair</span>
                         <ul class="list-points">
                           <li class="points">Dismantling of old coatings</li>
                           <li class="points">Wallpapering</li>
@@ -275,7 +277,11 @@
                 <span class="goal-info__title">6 steps to the goal</span>
                 <span class="goal-info__slider-counter">1/6</span>
                 <span class="goal-info__subtitle">Departure for measurements premises</span>
-                <p class="goal-info__text">After your call, we go to you to consult and measure the premises of your apartment. During our meeting, you can ask absolutely any number of questions. An appraiser-appraiser leaves to measure the room. <br><br>He will advise you on the issues of repair technology, apartment design, terms of repair of the apartment as a whole and its individual stages.</p>
+                <div class="goal-wrapper">
+                    <p class="goal-info__text">After your call, we go to you to consult and measure the premises of your apartment. During our meeting, you can ask absolutely any number of questions. An appraiser leaves to measure the room.</p>
+                    <p class="goal-info__text">He will advise you on the issues of repair technology, apartment design, terms of repair of the apartment as a whole and its individual stages.</p>
+                </div>
+                
                 <div class="slider-switcher">
                   <span class="slider-switcher__switcher-prev"></span>
                   <span class="slider-switcher__point slider-switcher__point_active"></span>
@@ -410,6 +416,7 @@
             </div>
             <div class="map"></div>
           </section>
+        </main> 
           <footer class="footer">
             <div class="home">
               <h1 class="home__logo">IC "Repair Design Project</h1>
@@ -427,7 +434,7 @@
               <button class="home__call">Request a call</button>
             </div> 
           </footer>
-        </main>    
+           
   </div>  
 </body>
 </html>
