feat: add custom style for checkboxes

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <label class="label-name form-label">Name<input class="input-name form-input" type="text" placeholder="What is your name:" required></label>                
                 <label class="label-name form-labe" >Phone<input class="input-phone form-input" type="tel" placeholder="Your phone number:" required></label>
                 <input class="input-submit" type="submit" value="submit">               
-                <label class="checkbox-text form-labe"><input  class="checkbox-marker form-input" type="checkbox" required>I agree to the processing of personal data</label>
+                <label class="checkbox-text form-labe"><input  class="checkbox-marker form-input" type="checkbox"  checked required><span class="check-enabled"></span>I agree to the processing of personal data</label>
               </form>
             </div>
             <div class="repair__types">
@@ -178,7 +178,7 @@
                   <label class="label-name form-label">Name<input class="input-name form-input" type="text" placeholder="What is your name:" required></label>                
                   <label class="label-phone form-label" >Phone<input class="input-phone form-input" type="tel" placeholder="Your phone number:" required></label>
                   <label class="label-mail form-label" >Email<input class="input-mail form-input" type="email" placeholder="Your email:" required></label>                                
-                  <label class="checkbox-text form-label"><input  class="checkbox-from form-input" type="checkbox" required>I agree to the processing of personal data</label>
+                  <label class="checkbox-text form-label"><input  class="checkbox-from form-input" type="checkbox" required checked><span class="check-enabled"></span>I agree to the processing of personal data</label>
                   <input class="input-submit" type="submit" value="Call the measurer"> 
                 </form>               
                 <span class="promotion-discount">Help save 10 - 20% of the cost of materials</span>                
@@ -400,7 +400,7 @@
                 <input class="input-label__question form-input" type="text" placeholder="I want to know:" required>
               </label>                                
               <label class="question-form__agreement input-label">
-                <input  class="input-label__agreement form-input" type="checkbox" required>I agree to the processing of personal data
+                <input  class="input-label__agreement form-input" type="checkbox" checked required><span class="check-enabled"></span>I agree to the processing of personal data
               </label>
               <input class="question-form__submit" type="submit" value="submit"> 
              </form>  
