feat: add call form

--- a/index.html
+++ b/index.html
@@ -436,7 +436,25 @@
               <button class="home__call">Request a call</button>
             </div> 
           </footer>
-           
+          <div class="call-me">
+            <div class="form-close"></div>
+            <span class="form-title">Leave a request and our manager will contact you shortly</span>
+            <form class="form-send" action="#">
+              <label class="form-send-input">Name
+                <input class="form-send-input__input send-input" type="text" placeholder="What is your name:" required>
+              </label>
+              <label class="form-send-input">Number
+                <input class="form-send-input__input send-input" type="tel" placeholder="Your phone number:" required>
+              </label>
+              <label class="form-send-input">Email
+                <input class="form-send-input__input send-input" type="email" placeholder="Your email" required>
+              </label>
+              <label class="form-send-input">I agree to the processing of personal data
+                <input class="form-send-input__input send-input-checkbox" type="checkbox" required>
+              </label>
+              <input class="form-send-submit" type="submit" value="submit">
+            </form>
+          </div>           
   </div>  
 </body>
 </html>
