--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             </div> 
           </footer>
           <div class="call-me">
-            <div class="form-close"></div>
+            <div class="form-close" id="close"></div>
             <span class="form-title">Leave a request and our manager will contact you shortly</span>
             <form class="form-send" action="#">
               <label class="form-send-input">Name
@@ -450,7 +450,7 @@
                 <input class="form-send-input__input send-input" type="email" placeholder="Your email" required>
               </label>
               <label class="form-send-input">I agree to the processing of personal data
-                <input class="form-send-input__input send-input-checkbox" type="checkbox" required>
+                <input class="form-send-input__input send-input-checkbox" type="checkbox" checked required><span class="check-enabled"></span>
               </label>
               <input class="form-send-submit" type="submit" value="submit">
             </form>
