refactor: change h1 to another

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
       <header class="header"> 
         <div class="home">
-          <a href="#" class="home__index"><h1 class="home__logo">IC "Repair Design Project"</h1></a>
+          <a href="#" class="home__index"><span class="home__logo">IC "Repair Design Project"</span></a>
           <nav class="home__menu">
             <ul class="menu">
               <li class="menu__items menu__items_selected"><a href="#home" class="menu__links menu__links_active ">home</a></li>
@@ -36,9 +36,9 @@
             </div>
             <div class="banner__banner">
               <div class="banner-header">
-                  <span class="banner-title">Turnkey Repair in the city of
+                  <h1 class="banner-title">Turnkey Repair in the city of
                       <span class="banner-title banner-title_colored">Rostov-on-Don</span>
-                    </span>
+                  </h1>
               </div>              
               <span class="banner-promo">Get ready-made turnkey repairs on time <br> with work time saving up to 45 days and 20% from cost of materials due to the organization of work</span>
               <button class="banner-calculate btn">CALCULATE THE COST</button>
