feat: add tablet media query

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="media.css">   
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <title>Document</title>
 </head>
@@ -117,8 +118,7 @@
                       <li class="points">Replacing doors</li>
                     </ul> 
                     <span class="item-price">from 900 rub / m2</span>                    
-                  </div>
-                  
+                  </div>                  
                 </div>
                 <div class="repair-examples__item">
                     <img class="item-image" src="assets/img/overhaul.png"  width="392" height="421" alt="redecorating">
